--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <br>
     <br>
     <br>
-    <p><a href="exp-pages.html">exp-pages</a></p>
+    <p><a href="exp-pages.html">Exp-pages</a></p>
     
 
 
