--- a/exp-pages.html
+++ b/exp-pages.html
@@ -7,5 +7,12 @@
   <body>
     <h1>Exp-pages</h1>
     <a href="exp-pages/index1.html">index1.html</a>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p><a href="index.html">Homepage</a></p>
   </body>
 </html>
